syntax = "proto2";

package syzoj.service.problem.rpc;

import "model/common/syzoj.common.proto";

option go_package = "github.com/syzoj/syzoj-ng-go/service/problem/rpc";

service Problem {
	rpc CreateProblem(CreateProblemRequest) returns (CreateProblemResponse);
	rpc GetProblem(GetProblemRequest) returns (GetProblemResponse);
	rpc UpdateProblemStatement(UpdateProblemStatementRequest) returns (UpdateProblemStatementResponse);
	rpc UpdateProblemTestData(UpdateProblemTestDataRequest) returns (UpdateProblemTestDataResponse);
	rpc SubmitProblem(SubmitProblemRequest) returns (SubmitProblemResponse);
}

enum Error {
	Unknown = 0;
	BadRequest = 1;
	ProblemNotFound = 2;
}

message CreateProblemRequest {
	optional string title = 2;
}

message CreateProblemResponse {
	optional Error error = 1;
	optional string problem_id = 2;
}

message GetProblemRequest {
	optional string problem_id = 1;
}

message GetProblemResponse {
	optional Error error = 1;
	optional string title = 2;
	optional syzoj.common.ProblemStatement statement = 3;
	optional syzoj.common.Data test_data = 4;
}

message UpdateProblemStatementRequest {
	optional string problem_id = 1;
	optional syzoj.common.ProblemStatement statement = 2;
}

message UpdateProblemStatementResponse {
	optional Error error = 1;
}

message UpdateProblemTestDataRequest {
	optional string problem_id = 1;
	optional syzoj.common.Data test_data = 2;
}

message UpdateProblemTestDataResponse {
	optional Error error = 1;
}

message SubmitProblemRequest {
	optional string problem_id = 1;
	optional syzoj.common.Data submit_data = 2;
}

message SubmitProblemResponse {
	optional Error error = 1;
	optional string submission_id = 2;
}
